# pyfoldercheck

./: .aws  .aws_select  .gitignore  .myenv  README.md  README.rst  copy.sh  index.html  pyproject.toml  requirements.txt  rss.xml  setup.py
config/: project.py  python.py
docs/: index.html  rss.xml
mp3lib/: configs.py
mp3lib/endpoints/: group_default.py  main.py
pyfoldercheck/: configs.py  main.py  static.py  utils.py
pyfoldercheck/endpoints/: group_default.py  main.py
src/pyfoldercheck/: configs.py  main.py
