[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyfoldercheck"
version = "0.0.6"
requires-python = ">=3.12"
authors = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
maintainers = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
description = "Pyfoldercheck will apply a set of checks on files in a folder"
readme = "README.md"
license = "MIT"
keywords=[
    "mp3",
    "pdf",
    "collection",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pytconf",
    "pylogconf",
]

[project.urls]
"Homepage" = "https://github.com/veltzer/pyfoldercheck"
"Bug Tracker" = "https://github.com/veltzer/pyfoldercheck/issues"
"Documentation" = "https://veltzer.github.io/pyfoldercheck"
"Download" = "https://pypi.org/project/pyfoldercheck/"
"Repository" = "https://github.com/veltzer/pyfoldercheck"

[project.scripts]
pyfoldercheck = "pyfoldercheck.main:main"

[tool.ruff]
line-length = 130

[tool.pytest.ini_options]
pythonpath = ["src"]
